Fri Aug 28 21:47:15 GMT 2015  Olly Betts <olly@survex.com>

	* src/gfxcore.cc: Fix the orientation of the starting end of tubes.

Fri Aug 28 21:21:28 GMT 2015  Olly Betts <olly@survex.com>

	* lib/po-to-msg.pl: Only check C format strings in messages with the
	  c-format flag.

Fri Aug 28 21:11:24 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS: Update.

Fri Aug 28 21:03:26 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc: Show "busy" mouse cursor while processing survey
	  data.

Fri Aug 28 19:09:44 GMT 2015  Olly Betts <olly@survex.com>

	* src/cavernlog.cc,src/cavernlog.h,src/mainfrm.cc: Use idle events
	  rather than wxYield to give much smoother update of the cavern log
	  window, especially on slower machines.  Also fixes an assertion if
	  you try to start processing a survex file while one is already
	  being processed.

Fri Aug 28 18:10:00 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cavern.sgml: Fix broken SGML from previous commit.

Fri Aug 28 05:53:00 GMT 2015  Olly Betts <olly@survex.com>

	* doc/cavern.sgml,doc/manual.sgml,lib/,src/: Drop support for showing
	  percentage progress in cavern.  It's confusing in a multiple-file
	  dataset as it shows progress in the current file so jumps around.
	  It also slows down processing, and on a slow machine you'd don't
	  want that, while on a fast machine processing isn't slow enough for
	  the progress display to be useful.

Fri Aug 28 05:28:38 GMT 2015  Olly Betts <olly@survex.com>

	* doc/manual.sgml,survex.iss.in: Process survey data with aven rather
	  than running cavern.

Sat Aug 22 21:14:40 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Use fancy quotes.

Wed Aug 19 14:08:14 GMT 2015  Olly Betts <olly@survex.com>

	* lib/fr.po: Merge translation updates from Michel Bovey.

Mon Aug 17 08:32:18 GMT 2015  Olly Betts <olly@survex.com>

	* NEWS,configure.ac,doc/manual.sgml: Update for 1.2.22.

Thu Aug 13 16:12:06 GMT 2015  Olly Betts <olly@survex.com>
