@@ -59,6 +59,9 @@ mingw_iss : survex.iss
 	  fi \
 	done > iss_tmp/i18nfiles.iss
 	cp lib/*.isl iss_tmp
+	mkdir iss_tmp/proj
+	: # FIXME: Take from the windows install of proj
+	cp -p /usr/share/proj/epsg /usr/share/proj/esri iss_tmp/proj
 	: # Also need to reduce colour depth it appears:
 	: # src/png2bmp lib/icons/aven_about.png iss_tmp/logo.bmp
 	DISPLAY= wine "c:/Program Files/Inno Setup 5/ISCC.exe" iss_tmp/survex.iss
