@@ -78,6 +78,7 @@ Source: "*.png"; DestDir: "{app}\images"
 Source: "*.msg"; DestDir: "{app}"
 Source: "*.htm"; DestDir: "{app}"
 Source: "manual\*.*"; DestDir: "{app}\manual"
+Source: "proj\*.*"; DestDir: "{app}\proj"
 ; Generate iss file for including the wxstd.mo files
 #include "i18nfiles.iss"
 
